[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/power_crook_fireball.png" type="Texture" id=1]
[ext_resource path="res://PowerCrookFireball.gd" type="Script" id=2]
[ext_resource path="res://TrailParticles.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 7.0

[node name="PowerCrookFireball" type="Area2D"]
collision_layer = 8
collision_mask = 16387
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
playing = true

[node name="TrailParticles" parent="." instance=ExtResource( 3 )]

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 9, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 0 )
shape = SubResource( 5 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -30, -15, 50, 30 )

[node name="HurtSelfTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_PowerCrookFireball_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_PowerCrookFireball_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="HurtSelfTimer" to="." method="_on_HurtSelfTimer_timeout"]
